poprawa kontrolerów i dokumentacja
poprawki zgodnie z migracją i modelami i seederami
